Add Spotless formatting enforcement