@@ -1,38 +1,36 @@
 package uk.co.compendiumdev.sparkstart;
 
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.Test;
-
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 public class ChallengerAutoConfigTest {
 
     @Test
     void defaultsToOwnedLocalSqliteMemoryMultiplayerOnAutoPort() {
-        ChallengerAutoConfig config = ChallengerAutoConfig.from(
-                Collections.emptyMap(), Collections.emptyMap());
+        ChallengerAutoConfig config =
+                ChallengerAutoConfig.from(Collections.emptyMap(), Collections.emptyMap());
 
         Assertions.assertEquals(ChallengerAutoConfig.Target.LOCAL, config.getTarget());
         Assertions.assertEquals(
-                ChallengerAutoConfig.Repository.SQLITE_MEMORY,
-                config.getLocalRepository());
-        Assertions.assertEquals(
-                ChallengerAutoConfig.PlayerMode.MULTI,
-                config.getLocalPlayerMode());
+                ChallengerAutoConfig.Repository.SQLITE_MEMORY, config.getLocalRepository());
+        Assertions.assertEquals(ChallengerAutoConfig.PlayerMode.MULTI, config.getLocalPlayerMode());
         Assertions.assertTrue(config.isAutoPort());
         Assertions.assertTrue(config.shouldRunFullSuite());
     }
 
     @Test
     void systemPropertiesOverrideEnvironmentValues() {
-        Map<String, String> properties = Map.of(
-                ChallengerAutoConfig.PROPERTY_TARGET, "existing",
-                ChallengerAutoConfig.PROPERTY_BASE_URL, "http://localhost:4567");
-        Map<String, String> environment = Map.of(
-                "CHALLENGER_AUTO_TARGET", "live",
-                "CHALLENGER_AUTO_BASE_URL", "https://example.invalid");
+        Map<String, String> properties =
+                Map.of(
+                        ChallengerAutoConfig.PROPERTY_TARGET, "existing",
+                        ChallengerAutoConfig.PROPERTY_BASE_URL, "http://localhost:4567");
+        Map<String, String> environment =
+                Map.of(
+                        "CHALLENGER_AUTO_TARGET", "live",
+                        "CHALLENGER_AUTO_BASE_URL", "https://example.invalid");
 
         ChallengerAutoConfig config = ChallengerAutoConfig.from(properties, environment);
 
@@ -42,18 +40,20 @@ public class ChallengerAutoConfigTest {
 
     @Test
     void existingDefaultsToLocalhostWhenBaseUrlNotProvided() {
-        ChallengerAutoConfig config = ChallengerAutoConfig.from(
-                Map.of(ChallengerAutoConfig.PROPERTY_TARGET, "existing"),
-                Collections.emptyMap());
+        ChallengerAutoConfig config =
+                ChallengerAutoConfig.from(
+                        Map.of(ChallengerAutoConfig.PROPERTY_TARGET, "existing"),
+                        Collections.emptyMap());
 
         Assertions.assertEquals("http://localhost:4567", config.getBaseUrl());
     }
 
     @Test
     void liveDefaultsToPublicApiChallengesHost() {
-        ChallengerAutoConfig config = ChallengerAutoConfig.from(
-                Map.of(ChallengerAutoConfig.PROPERTY_TARGET, "live"),
-                Collections.emptyMap());
+        ChallengerAutoConfig config =
+                ChallengerAutoConfig.from(
+                        Map.of(ChallengerAutoConfig.PROPERTY_TARGET, "live"),
+                        Collections.emptyMap());
 
         Assertions.assertEquals("https://apichallenges.eviltester.com", config.getBaseUrl());
         Assertions.assertFalse(config.shouldRunFullSuite());
@@ -61,11 +61,12 @@ public class ChallengerAutoConfigTest {
 
     @Test
     void liveCanOverrideBaseUrlForRailwayOrOtherRemoteEnvironments() {
-        ChallengerAutoConfig config = ChallengerAutoConfig.from(
-                Map.of(
-                        ChallengerAutoConfig.PROPERTY_TARGET, "live",
-                        ChallengerAutoConfig.PROPERTY_BASE_URL, "https://railway.example"),
-                Collections.emptyMap());
+        ChallengerAutoConfig config =
+                ChallengerAutoConfig.from(
+                        Map.of(
+                                ChallengerAutoConfig.PROPERTY_TARGET, "live",
+                                ChallengerAutoConfig.PROPERTY_BASE_URL, "https://railway.example"),
+                        Collections.emptyMap());
 
         Assertions.assertEquals(ChallengerAutoConfig.Target.LIVE, config.getTarget());
         Assertions.assertEquals("https://railway.example", config.getBaseUrl());
@@ -73,74 +74,78 @@ public class ChallengerAutoConfigTest {
 
     @Test
     void externalFullOptInAllowsMutatingSuiteForExternalTargets() {
-        ChallengerAutoConfig config = ChallengerAutoConfig.from(
-                Map.of(
-                        ChallengerAutoConfig.PROPERTY_TARGET, "live",
-                        ChallengerAutoConfig.PROPERTY_EXTERNAL_FULL, "true"),
-                Collections.emptyMap());
+        ChallengerAutoConfig config =
+                ChallengerAutoConfig.from(
+                        Map.of(
+                                ChallengerAutoConfig.PROPERTY_TARGET, "live",
+                                ChallengerAutoConfig.PROPERTY_EXTERNAL_FULL, "true"),
+                        Collections.emptyMap());
 
         Assertions.assertTrue(config.shouldRunFullSuite());
     }
 
     @Test
     void aliasesAreAcceptedForRepositoryAndPlayerMode() {
-        ChallengerAutoConfig config = ChallengerAutoConfig.from(
-                Map.of(
-                        ChallengerAutoConfig.PROPERTY_LOCAL_REPOSITORY, "in_memory",
-                        ChallengerAutoConfig.PROPERTY_LOCAL_PLAYER_MODE, "multi-user"),
-                Collections.emptyMap());
+        ChallengerAutoConfig config =
+                ChallengerAutoConfig.from(
+                        Map.of(
+                                ChallengerAutoConfig.PROPERTY_LOCAL_REPOSITORY, "in_memory",
+                                ChallengerAutoConfig.PROPERTY_LOCAL_PLAYER_MODE, "multi-user"),
+                        Collections.emptyMap());
 
         Assertions.assertEquals(
-                ChallengerAutoConfig.Repository.MEMORY,
-                config.getLocalRepository());
-        Assertions.assertEquals(
-                ChallengerAutoConfig.PlayerMode.MULTI,
-                config.getLocalPlayerMode());
+                ChallengerAutoConfig.Repository.MEMORY, config.getLocalRepository());
+        Assertions.assertEquals(ChallengerAutoConfig.PlayerMode.MULTI, config.getLocalPlayerMode());
     }
 
     @Test
     void invalidTargetIsRejected() {
         Assertions.assertThrows(
                 IllegalArgumentException.class,
-                () -> ChallengerAutoConfig.from(
-                        Map.of(ChallengerAutoConfig.PROPERTY_TARGET, "somewhere"),
-                        Collections.emptyMap()));
+                () ->
+                        ChallengerAutoConfig.from(
+                                Map.of(ChallengerAutoConfig.PROPERTY_TARGET, "somewhere"),
+                                Collections.emptyMap()));
     }
 
     @Test
     void invalidRepositoryIsRejected() {
         Assertions.assertThrows(
                 IllegalArgumentException.class,
-                () -> ChallengerAutoConfig.from(
-                        Map.of(ChallengerAutoConfig.PROPERTY_LOCAL_REPOSITORY, "postgres"),
-                        Collections.emptyMap()));
+                () ->
+                        ChallengerAutoConfig.from(
+                                Map.of(ChallengerAutoConfig.PROPERTY_LOCAL_REPOSITORY, "postgres"),
+                                Collections.emptyMap()));
     }
 
     @Test
     void invalidPlayerModeIsRejected() {
         Assertions.assertThrows(
                 IllegalArgumentException.class,
-                () -> ChallengerAutoConfig.from(
-                        Map.of(ChallengerAutoConfig.PROPERTY_LOCAL_PLAYER_MODE, "co-op"),
-                        Collections.emptyMap()));
+                () ->
+                        ChallengerAutoConfig.from(
+                                Map.of(ChallengerAutoConfig.PROPERTY_LOCAL_PLAYER_MODE, "co-op"),
+                                Collections.emptyMap()));
     }
 
     @Test
     void invalidPortIsRejected() {
         Assertions.assertThrows(
                 IllegalArgumentException.class,
-                () -> ChallengerAutoConfig.from(
-                        Map.of(ChallengerAutoConfig.PROPERTY_LOCAL_PORT, "not-a-port"),
-                        Collections.emptyMap()));
+                () ->
+                        ChallengerAutoConfig.from(
+                                Map.of(ChallengerAutoConfig.PROPERTY_LOCAL_PORT, "not-a-port"),
+                                Collections.emptyMap()));
     }
 
     @Test
     void baseUrlHasTrailingSlashesRemoved() {
-        ChallengerAutoConfig config = ChallengerAutoConfig.from(
-                Map.of(
-                        ChallengerAutoConfig.PROPERTY_TARGET, "existing",
-                        ChallengerAutoConfig.PROPERTY_BASE_URL, "http://localhost:4567///"),
-                Collections.emptyMap());
+        ChallengerAutoConfig config =
+                ChallengerAutoConfig.from(
+                        Map.of(
+                                ChallengerAutoConfig.PROPERTY_TARGET, "existing",
+                                ChallengerAutoConfig.PROPERTY_BASE_URL, "http://localhost:4567///"),
+                        Collections.emptyMap());
 
         Assertions.assertEquals("http://localhost:4567", config.getBaseUrl());
     }
