@@ -1,21 +1,21 @@
 package uk.co.compendiumdev.sparkstart;
 
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.Test;
-
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 public class ChallengerAutoLocalArgsTest {
 
     @Test
     void memorySinglePlayerArgsUseMemoryRepositoryAndNoMultiplayerFlag() {
-        ChallengerAutoConfig config = ChallengerAutoConfig.from(
-                Map.of(
-                        ChallengerAutoConfig.PROPERTY_LOCAL_REPOSITORY, "memory",
-                        ChallengerAutoConfig.PROPERTY_LOCAL_PLAYER_MODE, "single"),
-                Collections.emptyMap());
+        ChallengerAutoConfig config =
+                ChallengerAutoConfig.from(
+                        Map.of(
+                                ChallengerAutoConfig.PROPERTY_LOCAL_REPOSITORY, "memory",
+                                ChallengerAutoConfig.PROPERTY_LOCAL_PLAYER_MODE, "single"),
+                        Collections.emptyMap());
 
         Assertions.assertEquals(
                 List.of("-port=4567", "-thingifier-repository=memory"),
@@ -24,11 +24,12 @@ public class ChallengerAutoLocalArgsTest {
 
     @Test
     void sqliteMemoryMultiplayerArgsUseExistingShortcutFlag() {
-        ChallengerAutoConfig config = ChallengerAutoConfig.from(
-                Map.of(
-                        ChallengerAutoConfig.PROPERTY_LOCAL_REPOSITORY, "sqlite-memory",
-                        ChallengerAutoConfig.PROPERTY_LOCAL_PLAYER_MODE, "multi"),
-                Collections.emptyMap());
+        ChallengerAutoConfig config =
+                ChallengerAutoConfig.from(
+                        Map.of(
+                                ChallengerAutoConfig.PROPERTY_LOCAL_REPOSITORY, "sqlite-memory",
+                                ChallengerAutoConfig.PROPERTY_LOCAL_PLAYER_MODE, "multi"),
+                        Collections.emptyMap());
 
         Assertions.assertEquals(
                 List.of("-port=4568", "-sqlite-memory", "-multiplayer"),
@@ -37,11 +38,12 @@ public class ChallengerAutoLocalArgsTest {
 
     @Test
     void sqliteFileArgsUseRepositoryModeFlag() {
-        ChallengerAutoConfig config = ChallengerAutoConfig.from(
-                Map.of(
-                        ChallengerAutoConfig.PROPERTY_LOCAL_REPOSITORY, "sqlite-file",
-                        ChallengerAutoConfig.PROPERTY_LOCAL_PLAYER_MODE, "single"),
-                Collections.emptyMap());
+        ChallengerAutoConfig config =
+                ChallengerAutoConfig.from(
+                        Map.of(
+                                ChallengerAutoConfig.PROPERTY_LOCAL_REPOSITORY, "sqlite-file",
+                                ChallengerAutoConfig.PROPERTY_LOCAL_PLAYER_MODE, "single"),
+                        Collections.emptyMap());
 
         Assertions.assertEquals(
                 List.of("-port=4569", "-thingifier-repository=sqlite-file"),
@@ -50,11 +52,12 @@ public class ChallengerAutoLocalArgsTest {
 
     @Test
     void extraArgsAreAppendedInOrder() {
-        ChallengerAutoConfig config = ChallengerAutoConfig.from(
-                Map.of(
-                        ChallengerAutoConfig.PROPERTY_LOCAL_EXTRA_ARGS,
-                        "-unlimitedtodos,-enableadminapi"),
-                Collections.emptyMap());
+        ChallengerAutoConfig config =
+                ChallengerAutoConfig.from(
+                        Map.of(
+                                ChallengerAutoConfig.PROPERTY_LOCAL_EXTRA_ARGS,
+                                "-unlimitedtodos,-enableadminapi"),
+                        Collections.emptyMap());
 
         Assertions.assertEquals(
                 List.of(
